--- a/_About/introduction.html
+++ b/_About/introduction.html
@@ -3,6 +3,6 @@ title: 'Differentiable Display Photometric Stereo'
 author: '<strong>Seokjun Choi</strong>, Seungwoo Yoon, Giljoo Nam, Seungyong Lee, Seung-Hwan Baek '
 publication: '<em>Accepted to IEEE CVPR Conference, 2024<em>'
 header:
-  teaser: /assets/ddps/teaser.png
+  teaser: /assets/ddps/teaser.jpg
   page: http://cg.postech.ac.kr/research/rsblur
 ---
