--- a/_Publications/9999_dsl.html
+++ b/_Publications/9999_dsl.html
@@ -3,6 +3,6 @@ title: 'Dispersed Structured Light for Hyperspectral 3D Imaging'
 author: 'Suhyun Shin, <strong>Seokjun Choi</strong>, Felix Heide, Seung-Hwan Baek'
 publication: '<em>Accepted to IEEE CVPR Conference, 2024<em>'
 header:
-  teaser: /assets/dsl/teaser.jpg
+  teaser: /assets/dsl/teaser.png
   page: https://shshin1210.github.io/DSL/
 ---
