--- a/_Publications/9998_dpir.html
+++ b/_Publications/9998_dpir.html
@@ -3,6 +3,6 @@ title: 'Differentiable Point-based Inverse Rendering  '
 author: 'Hoon-Gyu Chung, <strong>Seokjun Choi</strong>, Seung-Hwan Baek '
 publication: '<em>Accepted to IEEE CVPR Conference, 2024<em>'
 header:
-  teaser: /assets/dpir/teaser.jpg
+  teaser: /assets/dpir/teaser.png
   page: https://hg-chung.github.io/DPIR/
 ---
