--- a/_About/introduction.html
+++ b/_About/introduction.html
@@ -1,8 +1,9 @@
 ---
-title: 'Differentiable Display Photometric Stereo'
-author: '<strong>Seokjun Choi</strong>, Seungwoo Yoon, Giljoo Nam, Seungyong Lee, Seung-Hwan Baek '
-publication: '<em>Accepted to IEEE CVPR Conference, 2024<em>'
-header:
-  teaser: /assets/ddps/teaser.jpg
-  page: http://cg.postech.ac.kr/research/rsblur
+Hi, I am currently a Ph.D. student at POSTECH, advised by Prof. Seung-Hwan Baek in the Computer Graphics Lab. 
+My interests lie in computer graphics, computer vision, and optics. 
+My research aims to co-design optical hardware and downstream vision software through an end-to-end optimization.
+I am working on computationally encoding various light properties as waves and decoding meaningful information using computer vision and graphics techniques.
+I believe I can contribute to exploring next-generation cameras, lenses, displays, and sensing technologies for smart devices, autonomous vehicles and VR/AR.
+
+I received my Bachelor’s degree in Computer Science and Engineering from POSTECH with magna cum laude honors. During my undergraduate studies, I acquired knowledge in system hacking and participated in the DEFCON 2019 finals as a member of the Hacking Club PLUS. Additionally, I am an avid gamer; I enjoy video games on Xbox that feature impressive graphics and storytelling, such as Hades, Baldur’s Gate, The Witcher, Assassin’s Creed, and the Diablo series.
 ---
