--- a/_Publications/9997_ddps.html
+++ b/_Publications/9997_ddps.html
@@ -4,5 +4,5 @@ author: '<strong>Seokjun Choi</strong>, Seungwoo Yoon, Giljoo Nam, Seungyong Lee
 publication: '<em>Accepted to IEEE CVPR Conference, 2024<em>'
 header:
   teaser: /assets/ddps/teaser.png
-  page: http://cg.postech.ac.kr/research/rsblur
+  page: https://michaelcsj.github.io/DDPS
 ---
