--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             <div class="column my-href"> 
               <p style="font-size: 1.25rem;"><b>A Real-world Display Inverse Rendering Dataset</b></p>
               <p> <b>Seokjun Choi</b>, Hoon-Gyu Chung, Yujin Jeon, Giljoo Nam, Seung-Hwan Baek</p>
-              <p><i><b>ICCV 2025</b></i></p>
+              <p><i><b>ICCV 2025</b> (Honolulu)</i></p>
               <div style="margin: 10px 0 0 0;">
                 <a class="button is-rounded is-dark is-small">
                   <span class="icon is-small">
@@ -218,6 +218,12 @@
                   </span>
                   <span>Code</span>
                 </a>
+                <a class="button is-rounded is-dark is-small">
+                  <span class="icon is-small">
+                    <i class="fas fa-database"></i>
+                  </span>
+                  <span>Dataset</span>
+                </a>
               </div>
             </div>
           </div>
@@ -236,7 +242,7 @@
             <div class="column my-href"> 
               <p style="font-size: 1.25rem;"><b>Differentiable Inverse Rendering with Interpretable Basis BRDFs</b></p>
               <p> Hoon-Gyu Chung, <b>Seokjun Choi</b>, Seung-Hwan Baek</p>
-              <p><i><b>CVPR 2025</b></i></p>
+              <p><i><b>CVPR 2025</b> (Nashville)</i></p>
               <div style="margin: 10px 0 0 0;">
                 <a class="button is-rounded is-dark is-small" href="https://hg-chung.github.io/Interpretable-Inverse-Rendering/">
                   <span class="icon is-small">
@@ -274,7 +280,7 @@
             <div class="column my-href"> 
               <p style="font-size: 1.25rem;"><b>Dual Exposure Stereo for Extended Dynamic Range 3D Imaging</b></p>
               <p> Juhyung Choi, Jinnyeong Kim, <b>Seokjun Choi</b>, Jinwoo Lee, Samuel Brucker, Mario Bijelic, Felix Heide, Seung-Hwan Baek</p>
-              <p><i><b>CVPR 2025</b></i></p>
+              <p><i><b>CVPR 2025</b> (Nashville)</i></p>
               <div style="margin: 10px 0 0 0;">
                 <a class="button is-rounded is-dark is-small" href="https://juhyc.github.io/ADEC/">
                   <span class="icon is-small">
@@ -306,7 +312,7 @@
             <div class="column my-href"> 
               <p style="font-size: 1.25rem;"><b>Differentiable Display Photometric Stereo</b></p>
               <p> <b>Seokjun Choi</b>, Seungwoo Yoon, Giljoo Nam, Seungyong Lee, Seung-Hwan Baek</p>
-              <p><i><b>CVPR 2024</b></i></p>
+              <p><i><b>CVPR 2024</b> (Seattle)</i></p>
               <div style="margin: 10px 0 0 0;">
                 <a class="button is-rounded is-dark is-small" href="https://michaelcsj.github.io/DDPS/">
                   <span class="icon is-small">
@@ -344,7 +350,7 @@
             <div class="column my-href"> 
               <p style="font-size: 1.25rem;"><b>Differentiable Point-based Inverse Rendering</b></p>
               <p> Hoon-Gyu Chung, <b>Seokjun Choi</b>, Seung-Hwan Baek</p>
-              <p><i><b>CVPR 2024</b></i></p>
+              <p><i><b>CVPR 2024</b> (Seattle)</i></p>
               <div style="margin: 10px 0 0 0;">
                 <a class="button is-rounded is-dark is-small" href="https://hg-chung.github.io/DPIR/">
                   <span class="icon is-small">
@@ -382,7 +388,7 @@
             <div class="column my-href"> 
               <p style="font-size: 1.25rem;"><b>Dispersed Structured Light for Hyperspectral 3D Imaging</b></p>
               <p> Suhyun Shin, <b>Seokjun Choi</b>, Felix Heide, Seung-Hwan Baek</p>
-              <p><i><b>CVPR 2024</b></i></p>
+              <p><i><b>CVPR 2024</b> (Seattle)</i></p>
               <div style="margin: 10px 0 0 0;">
                 <a class="button is-rounded is-dark is-small" href="https://shshin1210.github.io/DSL/">
                   <span class="icon is-small">
@@ -401,6 +407,12 @@
                     <svg class="svg-inline--fa fa-github fa-w-16" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="github" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512" data-fa-i2svg=""><path fill="currentColor" d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"></path></svg><!-- <i class="fab fa-github"></i> Font Awesome fontawesome.com -->
                   </span>
                   <span>Code</span>
+                </a>
+                <a class="button is-rounded is-dark is-small" href="https://drive.google.com/drive/folders/18HVXZuSfRsm4V31oBXS9DjdMzSNVSjcO?usp=drive_link">
+                  <span class="icon is-small">
+                    <i class="fas fa-database"></i>
+                  </span>
+                  <span>Dataset</span>
                 </a>
               </div>
             </div>
