--- a/index.html
+++ b/index.html
@@ -446,4 +446,12 @@
   </div>
 </section>
 
+<footer style="text-align: center; font-size: 0.85rem; color: #666; margin-top: 2rem;">
+  This website is a modified version of 
+  <a href="https://jonbarron.info/" style="color: #666; text-decoration: none;">Jon Barron's personal site</a>.  
+  Please do not copy, reuse, or reproduce the contents of this site without permission.  
+  <br>
+  © Modified by Seungjoo Shin. All rights reserved.
+</footer>
+
 </style></div></template></div></body></html>
