--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
   <a href="https://jonbarron.info/" style="color: #666; text-decoration: none;">Jon Barron's personal site</a>.  
   Please do not copy, reuse, or reproduce the contents of this site without permission.  
   <br>
-  © Modified by Seungjoo Shin. All rights reserved.
+  <!-- © Modified by Seungjoo Shin. All rights reserved. -->
 </footer>
 
 </style></div></template></div></body></html>
