--- a/index.html
+++ b/index.html
@@ -59,9 +59,14 @@
   </style></head>
 <body>
 
-<div class="container is-max-desktop">
-  <nav class="navbar is-white is-max-desktop">
-    <div class="container">
+<nav class="navbar is-white is-fixed-top" role="navigation" aria-label="main navigation">
+  <div class="container is-max-desktop">
+    <div class="navbar-brand">
+      <a class="navbar-item" href="#" style="font-weight: bold; font-size: 1.1rem;">
+        Seokjun Choi
+      </a>
+    </div>
+
       <div id="navMenu" class="navbar-menu">
         <div class="navbar-end">
           <!-- <span class="navbar-item">
@@ -454,4 +459,4 @@
   <!-- © Modified by Seungjoo Shin. All rights reserved. -->
 </footer>
 
-</style></div></template></div></body></html>
+<!-- </style></div></template></div></body></html> -->
