--- a/index.html
+++ b/index.html
@@ -58,48 +58,38 @@
   }
   </style></head>
 <body>
-
 <nav class="navbar is-white is-fixed-top" role="navigation" aria-label="main navigation">
   <div class="container is-max-desktop">
+    
+    <!-- 왼쪽: 이름 -->
     <div class="navbar-brand">
       <a class="navbar-item" href="#" style="font-weight: bold; font-size: 1.1rem;">
         Seokjun Choi
       </a>
+
+      <!-- 햄버거 버튼 -->
+      <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navMenu">
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+      </a>
     </div>
 
-      <div id="navMenu" class="navbar-menu">
-        <div class="navbar-end">
-          <!-- <span class="navbar-item">
-            <a class="button is-rounded is-white is-active">
-              <span class="icon">
-                <i class="fas fa-home"></i>
-              </span>
-              <span><strong>Home</strong></span>
-            </a>
-          </span> -->
-          <a class="navbar-item" href="https://michaelcsj.github.io/">
-            Home
-          </a>
-          <a class="navbar-item" href="mailto:seokjun@postech.ac.kr">
-            Email
-          </a>
-          <a class="navbar-item" href="https://michaelcsj.github.io/Seokjun_Choi_files/CV_Seokjun.pdf">
-            CV
-          </a>
-          <a class="navbar-item" href="https://scholar.google.co.kr/citations?user=5_DrXgQAAAAJ&hl=ko&oi=sra">
-            Scholar
-          </a>
-          <a class="navbar-item" href="https://github.com/MichaelCSJ">
-            Github
-          </a>
-          <a class="navbar-item" href="https://www.linkedin.com/in/seokjun-choi-734587190/">
-            LinkedIn
-          </a>
-        </div>
+    <!-- 오른쪽: 메뉴 -->
+    <div id="navMenu" class="navbar-menu">
+      <div class="navbar-end">
+        <a class="navbar-item" href="https://michaelcsj.github.io/">Home</a>
+        <a class="navbar-item" href="mailto:seokjun@postech.ac.kr">Email</a>
+        <a class="navbar-item" href="https://michaelcsj.github.io/Seokjun_Choi_files/CV_Seokjun.pdf">CV</a>
+        <a class="navbar-item" href="https://scholar.google.co.kr/citations?user=5_DrXgQAAAAJ&hl=ko&oi=sra">Scholar</a>
+        <a class="navbar-item" href="https://github.com/MichaelCSJ">Github</a>
+        <a class="navbar-item" href="https://www.linkedin.com/in/seokjun-choi-734587190/">LinkedIn</a>
       </div>
     </div>
-  </nav>
-</div>
+
+  </div>
+</nav>
+
 
 
 <section class="hero">
