--- a/index.html
+++ b/index.html
@@ -58,10 +58,12 @@
   }
   </style></head>
 <body>
+
+
 <nav class="navbar is-white is-fixed-top" role="navigation" aria-label="main navigation">
   <div class="container is-max-desktop">
-    
-    <!-- 왼쪽: 이름 -->
+
+    <!-- 왼쪽 이름 -->
     <div class="navbar-brand">
       <a class="navbar-item" href="#" style="font-weight: bold; font-size: 1.1rem;">
         Seokjun Choi
@@ -75,20 +77,21 @@
       </a>
     </div>
 
-    <!-- 오른쪽: 메뉴 -->
+    <!-- 오른쪽 메뉴 -->
     <div id="navMenu" class="navbar-menu">
       <div class="navbar-end">
         <a class="navbar-item" href="https://michaelcsj.github.io/">Home</a>
         <a class="navbar-item" href="mailto:seokjun@postech.ac.kr">Email</a>
         <a class="navbar-item" href="https://michaelcsj.github.io/Seokjun_Choi_files/CV_Seokjun.pdf">CV</a>
         <a class="navbar-item" href="https://scholar.google.co.kr/citations?user=5_DrXgQAAAAJ&hl=ko&oi=sra">Scholar</a>
-        <a class="navbar-item" href="https://github.com/MichaelCSJ">Github</a>
+        <a class="navbar-item" href="https://github.com/MichaelCSJ">GitHub</a>
         <a class="navbar-item" href="https://www.linkedin.com/in/seokjun-choi-734587190/">LinkedIn</a>
       </div>
     </div>
 
   </div>
 </nav>
+
 
 
 
