--- a/index.html
+++ b/index.html
@@ -50,6 +50,14 @@
       padding: 1rem 0;
       border-top: 1px solid #eee;
     }
+    .hero .button.is-small {
+      padding: 0.8rem 0.8rem;
+      font-size: 0.75rem;
+    }
+
+    .hero .icon.is-small svg {
+      height: 0.9em;
+    }
   </style>
 </head>
 <body>
@@ -78,7 +86,6 @@
       </div>
     </div>
   </nav>
-
 
 <section class="hero">
   <div class="hero-body">
