--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
               <p> <b>Seokjun Choi</b>, Hoon-Gyu Chung, Yujin Jeon, Giljoo Nam, Seung-Hwan Baek</p>
               <p><i><b>ICCV 2025</b> (Honolulu)</i></p>
               <div style="margin: 10px 0 0 0;">
-                <a class="button is-rounded is-dark is-small">
+                <a class="button is-rounded is-dark is-small" href="https://michaelcsj.github.io/DIR/">
                   <span class="icon is-small">
                     <svg class="svg-inline--fa fa-file fa-w-12" aria-hidden="true" focusable="false" data-prefix="fa" data-icon="file" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512" data-fa-i2svg=""><path fill="currentColor" d="M224 136V0H24C10.7 0 0 10.7 0 24v464c0 13.3 10.7 24 24 24h336c13.3 0 24-10.7 24-24V160H248c-13.2 0-24-10.8-24-24zm160-14.1v6.1H256V0h6.1c6.4 0 12.5 2.5 17 7l97.9 98c4.5 4.5 7 10.6 7 16.9z"></path></svg><!-- <i class="fa fa-file"></i> Font Awesome fontawesome.com -->
                   </span>
