--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                   <a href="https://www.shbaek.com//">Seung-Hwan Baek</a>. 
 
                   <br><br>
-                  My research interest primarily focuses on <b>computer graphics</b> and <b>computational imaging</b>, with a focus on photometric stereo, inverse rendering, and computational illumination.
+                  My research interest primarily focuses on <b>Inverse Rendering</b>, <b>Photorealistic Materials & Lighting</b> and <b>Computational Illumination</b>, with a focus on photometric stereo, inverse rendering, and computational illumination.
 
                   <!-- <br><br>
                   <b>Internship:</b> I'm currently looking for a research internship opportunity beginning in Winter 2026 (Spring or Summer would also work). Feel free to reach out via email (seokjun_at_postech.ac.kr) or on LinkedIn!" -->
