--- a/index.html
+++ b/index.html
@@ -54,9 +54,12 @@
       padding: 0.8rem 0.8rem;
       font-size: 0.75rem;
     }
-
     .hero .icon.is-small svg {
       height: 0.9em;
+    }
+    .highlight-paper {
+      background-color: #FFB30033; /* POSTECH Orange */
+      /* border-radius: 8px;*/
     }
   </style>
 </head>
@@ -175,7 +178,7 @@
             <h4 class="title is-4">Publications</h4>
           </div>
           <!-- Start DIR -->
-          <div id="dir" class="columns is-centered">
+          <div id="dir" class="columns is-centered highlight-paper">
             <div class="column is-one-third has-text-left">
               <div class="columns is-left">
                 <div class="column is-full has-text-left">
@@ -196,7 +199,7 @@
                   </span>
                   <span>Page</span>
                 </a>
-                <a class="button is-rounded is-dark is-small">
+                <a class="button is-rounded is-dark is-small" href="https://arxiv.org/abs/2508.14411">
                   <span class="icon is-small">
                     <i class="ai ai-arxiv"></i>
                   </span>
@@ -289,7 +292,7 @@
           </div>
           <!-- End DualExstereo -->
           <!-- Start DDPS -->
-          <div id="ddps" class="columns is-centered">
+          <div id="ddps" class="columns is-centered highlight-paper">
             <div class="column is-one-third has-text-left">
               <div class="columns is-left">
                 <div class="column is-full has-text-left">
