--- a/index.html
+++ b/index.html
@@ -415,29 +415,47 @@
     </div>
   </div>
 </div></section>
+  <!-- Awards -->
+  <section class="hero">
+    <div class="hero-body">
+      <div class="container is-max-desktop">
+        <div class="columns is-centered">
+          <div class="column is-four-fifths">
 
-<!-- Awards -->
-<section class="hero">
-  <div class="hero-body">
-    <div class="container is-max-desktop">
-      <div class="columns is-centered">
-        <div class="column is-four-fifths">
-          <div class="content has-text-left">
-            <h4 class="title is-4">Awards</h4>
-          </div>
-          <div class="columns is-centered">
-            <div class="column is-one-quarter has-text-left">
-              <b>2015-2020</b>
+            <div class="content has-text-left">
+              <h4 class="title is-4">Awards & Scholarships</h4>
             </div>
-            <div class="column my-href"> 
-              Top-ranked admission & full tuition (granted for full semesters), Chung-Ang University, Seoul, Korea.
+
+            <!-- rows wrapper (optional) -->
+            <div>
+
+              <!-- Row 1 -->
+              <div class="columns is-vcentered">
+                <div class="column is-one-quarter has-text-left">
+                  <b>2025</b>
+                </div>
+                <div class="column my-href">
+                  First Prize, Outstanding Paper Award — BK21 End-to-End Big Data Innovation Talent Development Program, POSTECH, Pohang, Korea.
+                </div>
+              </div>
+
+              <!-- Row 2 -->
+              <div class="columns is-vcentered">
+                <div class="column is-one-quarter has-text-left">
+                  <b>2015–2020</b>
+                </div>
+                <div class="column my-href">
+                  Top-ranked admission &amp; full tuition (granted for full semesters), Chung-Ang University, Seoul, Korea.
+                </div>
+              </div>
+
             </div>
+
           </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
   <!-- Footer -->
   <footer>
